feat: add endpoint for getting flashcard by id
